Fixes wrong spacing svg-icon
SRFCMSAL-2427

--- a/source/_patterns/10-atoms/indicators/teaser-label.scss
+++ b/source/_patterns/10-atoms/indicators/teaser-label.scss
@@ -93,6 +93,12 @@
   .svg-icon {
     margin: 2px 4px 0 0;
   }
+
+  .svg-icon--tiny-but-small-on-desktop-up {
+    @include smartphone {
+      margin: 1px 4px 0 0;
+    }
+  }
 }
 
 /* Positioning */
